driver can't be seen in the driver editor(blender2.82) #74332

Closed
opened 2020-03-01 08:49:01 +01:00 by guang liang chen · 7 comments

System Information
Operating system:window x64
Graphics card: gt710

Blender Version
blender 2.82

Short description of error
a bone has driver, when I select the bone in the viewport It can be seen in the driver editor, but when I select the bone in the Outliner, the drive can't be seen in the driver editor.only error in blender2.82 \2.83 ,but 2.80 is fine.driver error.gif
https://i.postimg.cc/7Lk9pR17/driver-error.gif

Exact steps for others to reproduce the error
74332.blend

  • Open file
  • Pose mode
  • Select bone in viewport - you can see driver in driver editor
  • Deselect bone
  • Select bone in outliner - you can not see driver in driver editor
**System Information** Operating system:window x64 Graphics card: gt710 **Blender Version** blender 2.82 **Short description of error** a bone has driver, when I select the bone in the viewport It can be seen in the driver editor, but when I select the bone in the Outliner, the drive can't be seen in the driver editor.only error in blender2.82 \2.83 ,but 2.80 is fine.![driver error.gif](https://archive.blender.org/developer/F8381233/driver_error.gif) https://i.postimg.cc/7Lk9pR17/driver-error.gif **Exact steps for others to reproduce the error** [74332.blend](https://archive.blender.org/developer/F8382974/74332.blend) - Open file - Pose mode - Select bone in viewport - you can see driver in driver editor - Deselect bone - Select bone in outliner - you can not see driver in driver editor

Added subscriber: @imdjs

Added subscriber: @imdjs
guang liang chen changed title from drive can't be seen in the driver editor to driver can't be seen in the driver editor(blender2.82) 2020-03-01 08:53:52 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sybren A. Stüvel self-assigned this 2020-03-02 16:53:27 +01:00
Sybren A. Stüvel removed their assignment 2020-03-02 17:17:16 +01:00
Nathan Craddock was assigned by Sybren A. Stüvel 2020-03-02 17:17:16 +01:00

Added subscribers: @natecraddock, @dr.sybren

Added subscribers: @natecraddock, @dr.sybren

I did a git bisect, and apparently it's caused by 82627c5016. @Zachman can you take a look at this?

I did a git bisect, and apparently it's caused by 82627c5016. @Zachman can you take a look at this?

@dr.sybren Yes I will take a look

@dr.sybren Yes I will take a look

This issue was referenced by fe7528ee91

This issue was referenced by fe7528ee919ba75a1216aad3257faede33cbac14

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74332
No description provided.